Fix background on iOS

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -203,12 +203,21 @@ ul {
 
 /* Breakpoint Small (sm) */
 @media (min-width: 576px) {
-  body {
+  html:before {
+    content: ' ';
+    display: block;
     background-image: linear-gradient(to top, var(--cb-light-blue), var(--cb-light-gold));
     background-position: top center;
     background-repeat: no-repeat;
-    background-attachment: fixed;
     background-size: cover;
+    height: 100vh;
+    width: 100vw;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    position: fixed;
+    z-index: -10;
   }
   footer {
     margin-bottom: 0;
